2017-10-30  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-9.
	* Added FIGARCH model, currently restricted to (1,d,1) because of complexity of positivity conditions (Conrad and Haag).

2017-10-01  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-8.
	* Native routine registration fix
	* Removal of error on using less than 100 data points for estimation (now
	creates a warning)
	* Will not be migrating to new xts plotting. Investigating alternative
	avenues.

2015-07-02  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-6.
	* Fix to plots (thanks to Eric Zivot for bug). No longer
	using xts for internal plots, but instead (date, series) format.
	This will probably change once I have time to start re-coding
	the plots to use functionality of the new xts plotting functions.
	* Fixes to pass new CRAN change of only attaching the base package.

2015-03-04  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-5.
	* Exported and documented the mcsTest.
	* Added confint S4 method (same as stats S3 confint) at user's
    request (replaces previous confinterval naming).
    * Fix to iGARCH simulation (thanks to Andy Tang).
    * Added the reduce method to ARFIMAfit class
    (was previously only available for uGARCHfit class).
    * Added the arfimacv function for ARFIMAX time series cross-validation.
    * Fixes to some examples (were based on deprecated extractor methods).

2014-11-08  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-4.
	* Added a numderiv.control argument to the ugarchfit and arfimafit
	functions to provide finer control on the estimation of the standard
	errors using numerical derivatives based on the hessian and jacobian
	functions in the numDeriv package.
	* Tweaked the standard error calculation for the robust method.
	* Added parallel in Depends to avoid warning on CRAN.
