@@ -1,8 +1,8 @@
 Package: rugarch
 Type: Package
 Title: Univariate GARCH Models
-Version: 1.3-9
-Date: 2017-10-30
+Version: 1.4-0
+Date: 2017-11-14
 Authors@R: c(person("Alexios", "Ghalanos", role = c("aut", "cre"), email = "alexios@4dscape.com"))
 Depends: R (>= 3.0.2), methods, parallel
 LinkingTo: Rcpp (>= 0.10.6), RcppArmadillo (>= 0.2.34)
