@@ -612,7 +612,13 @@ Truncating the expansion to 1000 lags and setting $\bar \varepsilon _{t - j}^2 =
 \end{array}
 \end{equation}
 
-Contrary to the case of the ARFIMA model, the degree of persistence in the FIGARCH model operates in the oppposite direction, so that as the fractional differencing parameter $d$ gets closer to one, the memory of the FIGARCH process increases, a direct result of on the parameter acting on the squared errors rather than the conditional variance. When $d=0$ the FIGARCH collapses to the vanilla GARCH model and when $d=1$ to the integrated GARCH model. The question of the stationarity of a FIGARCH(q,d,p) model is open and there is no general proof of this at present. As such, the stationarity argument in the estimation function is used interchangeably for positivity conditions. While \cite{Baillie1996} provided a set of sufficient conditions for the FIGARCH(1,d,1) case which may be restrictive in practice which is why \cite{Conrad2006} provide a more general set of sufficient conditions for the FIGARCH(q,d,p) model.
+Contrary to the case of the ARFIMA model, the degree of persistence in the FIGARCH model operates in the oppposite direction, so that as the fractional differencing parameter $d$ gets closer to one, the memory of the FIGARCH process increases, a direct result of on the parameter acting on the squared errors rather than the conditional variance. When $d=0$ the FIGARCH collapses to the vanilla GARCH model and when $d=1$ to the integrated GARCH model. The question of the stationarity of a FIGARCH(q,d,p) model is open and there is no general proof of this at present. As such, the stationarity argument in the estimation function is used interchangeably for positivity conditions. While \cite{Baillie1996} provided a set of sufficient conditions for the FIGARCH(1,d,1) case which may be restrictive in practice which is why \cite{Conrad2006} provide a more general set of sufficient conditions for the FIGARCH(q,d,p). Equations (7)-(9) and Corollary 1 of their paper provide the conditions for the positivity in the case of the FIGARCH(1,d,1) case which the \verb@rugarch@ package implements.\footnote{At present, only the (1,d,1) case is allowed.} Therefore, while it is possible to estimate any order desired, only conditions for the (1,d,1) are checked and imposed during estimation when the stationarity\footnote{Which is used here to denote a positivity constraint} flag is set to TRUE.
+
+
+Numerous alternatives and extensions have been proposed in the literature since the FIGARCH model was published. The model of \cite{Karanasos2004} models the squared residuals as deviations from $\omega$ so that it specifies a covariance stationary process (although the question of strict stationary still remains open). Augmenting the EGARCH model with the fractional operator appears to provide for a natural way to deal with the positivity issue since the process is always strictly positive (see \cite{Bollerslev1996b}). This may be included in a future version.
+
+
+
 
 \subsection{Conditional Distributions}\label{section:distributions}
 The \verb@rugarch@ package supports a range of univariate distributions
