@@ -123,7 +123,7 @@
   Timestamp                = {2012.02.22}
 }
 
-@Article{Bollerslev1996,
+@Article{Bollerslev1996a,
   Title                    = {Periodic autoregressive conditional heteroscedasticity},
   Author                   = {Bollerslev, Tim and Ghysels, Eric},
   Journal                  = {Journal of Business \& Economic Statistics},
@@ -135,6 +135,17 @@
   Owner                    = {alexios},
   Publisher                = {Taylor \& Francis},
   Timestamp                = {2013.03.20}
+}
+
+@article{Bollerslev1996b,
+  title={Modeling and pricing long memory in stock market volatility},
+  author={Bollerslev, Tim and Mikkelsen, Hans Ole},
+  journal={Journal of econometrics},
+  volume={73},
+  number={1},
+  pages={151--184},
+  year={1996},
+  publisher={Elsevier}
 }
 
 @Article{Box1964,
