@@ -1,3 +1,8 @@
+2017-11-14  Alexios Ghalanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.4-0.
+	* Added robust score calculation to the returned uGARCHfit object to enable recreating the robust standard errors.
+
+
 2017-10-30  Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-9.
 	* Added FIGARCH model, currently restricted to (1,d,1) because of complexity of positivity conditions (Conrad and Haag).
